fixed font size on technologies on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,7 @@ img.tech-img {
     font-size: 0.9rem !important;
   }
   h5.tech-title {
-    font-size: 1.1rem !important;
+    font-size: 0.8rem !important;
   }
   img.tech-img {
     width: 35px !important;
